force-app/main/default/objects/Customer_Review__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Trustpilot_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>