force-app/main/default/objects/Customer_Review__c/fields/Customer_API_Link__c.field-meta.xml
<CustomField>
    <fullName>Customer_API_Link__c</fullName>
    <label>Customer API Link</label>
    <type>Url</type>
</CustomField>