force-app/main/default/objects/Customer_Review__c/fields/Event_API_Link__c.field-meta.xml
<CustomField>
    <fullName>Event_API_Link__c</fullName>
    <label>Event API Link</label>
    <type>Url</type>
</CustomField>