force-app/main/default/objects/Customer_Review__c/fields/Link_to_Lead__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Lead__c</fullName>
    <formula>&quot;https://dfj.lightning.force.com/lightning/r/Lead/&quot;&amp; Lead_ID__c &amp;&quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Lead</label>
    <type>Text</type>
</CustomField>