force-app/main/default/objects/Customer_Review__c/fields/Link_to_Review__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Review__c</fullName>
    <label>Link to Review</label>
    <type>Url</type>
</CustomField>