force-app/main/default/objects/Customer_Review__c/fields/Responsible_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Lawyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Lawyer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trustpilot_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>