force-app/main/default/objects/Customer_Review__c/fields/Review_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Review_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Deleted</label>
    <type>Checkbox</type>
</CustomField>