force-app/main/default/objects/Customer_Review__c/fields/Review_ID__c.field-meta.xml
<CustomField>
    <fullName>Review_ID__c</fullName>
    <externalId>true</externalId>
    <label>Review ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>