force-app/main/default/objects/Customer_Review__c/fields/Review_Portal__c.field-meta.xml
<CustomField>
    <fullName>Review_Portal__c</fullName>
    <label>Review Portal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trustpilot</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>