force-app/main/default/objects/Customer_Review__c/fields/Stars__c.field-meta.xml
<CustomField>
    <fullName>Stars__c</fullName>
    <label>Stars</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>