force-app/main/default/objects/Customer_Review__c/fields/Submission_Created_At__c.field-meta.xml
<CustomField>
    <fullName>Submission_Created_At__c</fullName>
    <label>Submission Created At</label>
    <type>DateTime</type>
</CustomField>