force-app/main/default/objects/Customer_Review__c/fields/Tag_Group__c.field-meta.xml
<CustomField>
    <fullName>Tag_Group__c</fullName>
    <label>Tag Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>