force-app/main/default/objects/Customer_Review__c/fields/Verified_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Verified_Reviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified Reviewer</label>
    <type>Checkbox</type>
</CustomField>